<resources>
    <string name="app_name">QuizApp</string>
    <string name="name">Name</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="welcome">Welcome</string>
    <string name="start">Start</string>
    <string name="quiz_app">Quiz App</string>
    <string name="submit">Submit</string>
    <string name="next_answer">Go to next answer</string>
    <string name="results">See Results</string>
    <string name="finish">Finish</string>
    <string name="congratulations">Congratulations!!!</string>
    <string name="result">Result</string>
</resources>